--- a/v/vi/vir/viralitytoday.com.html
+++ b/v/vi/vir/viralitytoday.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the viralitytoday.com privacy policy that was archived on 2016-11-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161128011343id_/http%3A//www.viralitytoday.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the viralitytoday.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606012420id_/http%3A//www.viralitytoday.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class="no-js" lang="en" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml"><!--<![endif]--><head>
  
@@ -29,9 +29,12 @@
 <meta name="twitter:image:src" content="">
  
 <meta name="description" content="">
-<script type="text/javascript" async="" src="https://www.dfnhosting.com/js/show_ads_ecpmband.js?pubId=3070"></script><script id="twitter-wjs" src="https://platform.twitter.com/widgets.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/platform.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/sdk.js#xfbml=1&amp;appId=1086460298113427&amp;version=v2.0"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script async="" src="//ajax.cloudflare.com/cdn-cgi/nexp/dok3v=088620b277/cloudflare.min.js"></script><script type="text/javascript">
+<script id="twitter-wjs" src="https://platform.twitter.com/widgets.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/platform.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/sdk.js#xfbml=1&amp;appId=1086460298113427&amp;version=v2.0"></script><script async="" src="//ajax.cloudflare.com/cdn-cgi/nexp/dok3v=85b614c0f6/cloudflare.min.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">
 //<![CDATA[
-try{if (!window.CloudFlare) {var CloudFlare=[{verbose:0,p:0,byc:0,owlid:"cf",bag2:1,mirage2:0,oracle:0,paths:{cloudflare:"/cdn-cgi/nexp/dok3v=1613a3a185/"},atok:"38f3b89269532607b84b4b75ad94f53b",petok:"866ea245635de998c3f6566da20dbaa951298105-1480295623-1800",zone:"viralitytoday.com",rocket:"0",apps:{"ga_key":{"ua":"UA-79564690-1","ga_bs":"2"}}}];!function(a,b){a=document.createElement("script"),b=document.getElementsByTagName("script")[0],a.async=!0,a.src="//ajax.cloudflare.com/cdn-cgi/nexp/dok3v=088620b277/cloudflare.min.js",b.parentNode.insertBefore(a,b)}()}}catch(e){};
+var _gaq = _gaq || [];_gaq.push(['_setAccount', 'UA-79564690-1']);_gaq.push(['_trackPageview']);(function() {var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);})();(function(b){(function(a){"__CF"in b&&"DJS"in b.__CF?b.__CF.DJS.push(a):"addEventListener"in b?b.addEventListener("load",a,!1):b.attachEvent("onload",a)})(function(){"FB"in b&&"Event"in FB&&"subscribe"in FB.Event&&(FB.Event.subscribe("edge.create",function(a){_gaq.push(["_trackSocial","facebook","like",a])}),FB.Event.subscribe("edge.remove",function(a){_gaq.push(["_trackSocial","facebook","unlike",a])}),FB.Event.subscribe("message.send",function(a){_gaq.push(["_trackSocial","facebook","send",a])}));"twttr"in b&&"events"in twttr&&"bind"in twttr.events&&twttr.events.bind("tweet",function(a){if(a){var b;if(a.target&&a.target.nodeName=="IFRAME")a:{if(a=a.target.src){a=a.split("#")[0].match(/[^?=&]+=([^&]*)?/g);b=0;for(var c;c=a[b];++b)if(c.indexOf("url")===0){b=unescape(c.split("=")[1]);break a}}b=void 0}_gaq.push(["_trackSocial","twitter","tweet",b])}})})})(window);//]]>
+</script><script type="text/javascript">
+//<![CDATA[
+try{if (!window.CloudFlare) {var CloudFlare=[{verbose:0,p:0,byc:0,owlid:"cf",bag2:1,mirage2:0,oracle:0,paths:{cloudflare:"/cdn-cgi/nexp/dok3v=1613a3a185/"},atok:"c53a07469347a07c97d7a8a16459e10d",petok:"fc1a119aaa28f76568d28cb66ab8cd759ff73979-1496712260-1800",zone:"viralitytoday.com",rocket:"0",apps:{"ga_key":{"ua":"UA-79564690-1","ga_bs":"2"}}}];!function(a,b){a=document.createElement("script"),b=document.getElementsByTagName("script")[0],a.async=!0,a.src="//ajax.cloudflare.com/cdn-cgi/nexp/dok3v=85b614c0f6/cloudflare.min.js",b.parentNode.insertBefore(a,b)}()}}catch(e){};
 //]]>
 </script>
 <link rel="canonical" href="http://www.viralitytoday.com/privacy-policy">
@@ -65,22 +68,7 @@ try{if (!window.CloudFlare) {var CloudFlare=[{verbose:0,p:0,byc:0,owlid:"cf",bag
  
 <script src="http://cdn.viralitytoday.com/assets/viralitytoday.com/js/vendor/modernizr-2.8.3.min.js?v=2.0.234"></script>
 <script src="http://cdn.viralitytoday.com/assets/viralitytoday.com/js/all.min.js?v=2.0.234"></script>
-<meta name="vrc" content="2016-11-27 18:02:22">
-<script type="text/javascript">
-/* <![CDATA[ */
-var _gaq = _gaq || [];
-_gaq.push(['_setAccount', 'UA-79564690-1']);
-_gaq.push(['_trackPageview']);
-
-(function() {
-var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-})();
-
-(function(b){(function(a){"__CF"in b&&"DJS"in b.__CF?b.__CF.DJS.push(a):"addEventListener"in b?b.addEventListener("load",a,!1):b.attachEvent("onload",a)})(function(){"FB"in b&&"Event"in FB&&"subscribe"in FB.Event&&(FB.Event.subscribe("edge.create",function(a){_gaq.push(["_trackSocial","facebook","like",a])}),FB.Event.subscribe("edge.remove",function(a){_gaq.push(["_trackSocial","facebook","unlike",a])}),FB.Event.subscribe("message.send",function(a){_gaq.push(["_trackSocial","facebook","send",a])}));"twttr"in b&&"events"in twttr&&"bind"in twttr.events&&twttr.events.bind("tweet",function(a){if(a){var b;if(a.target&&a.target.nodeName=="IFRAME")a:{if(a=a.target.src){a=a.split("#")[0].match(/[^?=&]+=([^&]*)?/g);b=0;for(var c;c=a[b];++b)if(c.indexOf("url")===0){b=unescape(c.split("=")[1]);break a}}b=void 0}_gaq.push(["_trackSocial","twitter","tweet",b])}})})})(window);
-/* ]]> */
-</script>
+<meta name="vrc" content="2017-06-05 21:20:07">
 </head>
 <body>
 <style>@media screen and (min-width: 1550px) {#float1{position:fixed!important;}}</style>
@@ -177,7 +165,7 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 <div class="container">
 <div class="row">
 <div class="col-xs-6 col-sm-6 copyright-info">
-<p>Copyright © 2016 ViralityToday.com | All Rights Reserved</p>
+<p>Copyright © 2017 ViralityToday.com | All Rights Reserved</p>
 </div>
 <div class="col-xs-6 col-sm-6 footer-menu text-right">
 <ul>
@@ -204,35 +192,9 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 </script>
  
  
-<script type="text/javascript">
-  /*<![CDATA[*/
-  if(!(window.EcpmbandConfig && window.EcpmbandConfig.ads)) window.EcpmbandConfig = {ads:[]};
-  EcpmbandConfig.ads.push({
-      ecpmband_key:"0d2e2b54895f69561107c1b55fbb3d43",
-      ecpmband_channel: "",
-      ecpmband_code_format:"ads-async.js",
-      ecpmband_click:"",
-      ecpmband_custom_params:{},
-      ecpmband_target_id:"ecpmband-0d2e2b54895f69561107c1b55fbb3d43"
-  });
-  (function () {
-      var sc = document.createElement("script");
-      sc.type = "text/javascript";
-      sc.async = true;
-      sc.src = (location.protocol == "https:" ? "https:" : "http:") + "//www.dfnhosting.com\/js\/show_ads_ecpmband.js?pubId=3070";
-      var s = document.getElementsByTagName("script")[0];
-      s.parentNode.insertBefore(sc, s);
-  })();
-  /*]]>*/
-</script>
- 
- 
-<div id="ecpmband-0d2e2b54895f69561107c1b55fbb3d43"></div>
- 
- 
  
  
 1
-<script type="text/javascript">/* <![CDATA[ */(function(d,s,a,i,j,r,l,m,t){try{l=d.getElementsByTagName('a');t=d.createElement('textarea');for(i=0;l.length-i;i++){try{a=l[i].href;s=a.indexOf('/cdn-cgi/l/email-protection');m=a.length;if(a&&s>-1&&m>28){j=28+s;s='';if(j<m){r='0x'+a.substr(j,2)|0;for(j+=2;j<m&&a.charAt(j)!='X';j+=2)s+='%'+('0'+('0x'+a.substr(j,2)^r).toString(16)).slice(-2);j++;s=decodeURIComponent(s)+a.substr(j,m-j)}t.innerHTML=s.replace(/</g,'&lt;').replace(/>/g,'&gt;');l[i].href='mailto:'+t.value}}catch(e){}}}catch(e){}})(document);/* ]]> */</script>
+
 
 </body></html>
