--- a/b/be/ber/berkeleywellness.com.html
+++ b/b/be/ber/berkeleywellness.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the berkeleywellness.com privacy policy that was archived on 2016-12-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161222034129id_/http%3A//www.berkeleywellness.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the berkeleywellness.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606013843id_/http%3A//www.berkeleywellness.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" version="XHTML+RDFa 1.0" dir="ltr" xmlns:content="http://purl.org/rss/1.0/modules/content/" xmlns:dc="http://purl.org/dc/terms/" xmlns:foaf="http://xmlns.com/foaf/0.1/" xmlns:og="http://ogp.me/ns#" xmlns:rdfs="http://www.w3.org/2000/01/rdf-schema#" xmlns:sioc="http://rdfs.org/sioc/ns#" xmlns:sioct="http://rdfs.org/sioc/types#" xmlns:skos="http://www.w3.org/2004/02/skos/core#" xmlns:xsd="http://www.w3.org/2001/XMLSchema#"><head profile="http://www.w3.org/1999/xhtml/vocab">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -22,19 +22,19 @@
      
 
 <link rel="stylesheet" href="/assets/sites/wellness.css">
-<script src="https://i.yldbt.com/m/009b/v1/init?cb=yieldbot.updateState&amp;v=v2015-06-23%7Ce14513e&amp;vi=k61cviu88zhtaf2qsq&amp;si=k61cviu8dncwzi0v0p&amp;pvi=k61cvnhp29nc7egjc9&amp;pvd=2&amp;lpvi=k61cviu7ym2o18h22u&amp;nv&amp;sn=lb%7Cmr-flex&amp;ssz=%7C300x250.300x600&amp;lo=https%3A//web.archive.org/web/20161222034129id_/http%253A//www.berkeleywellness.com/privacy-policy&amp;r=&amp;sd=800x600&amp;to=0&amp;la=en-US&amp;np=Linux%20x86_64&amp;ua=Mozilla/5.0%20%28X11%3B%20Linux%20x86_64%29%20AppleWebKit/537.36%20%28KHTML%2C%20like%20Gecko%29%20HeadlessChrome/69.0.3494.0%20Safari/537.36&amp;lpv=6029&amp;cts_ns=1580426072484&amp;cts_js=1580426074279&amp;cts_ini=1580426074289&amp;e"></script><script async="" src="https://web.archive.org/web/20151004024201/https://sb.scorecardresearch.com/beacon.js"></script><script src="//web.archive.org/web/20151004024208/http://cdn.yldbt.com/js/yieldbot.intent.js"></script><script type="text/javascript" src="/assets/namespace.js"></script>
+<script src="https://i.yldbt.com/m/009b/v1/init?cb=yieldbot.updateState&amp;v=v2015-06-23%7Ce14513e&amp;vi=k61cvjend5cq2y5yvi&amp;si=k61cvjeogbonptz74q&amp;pvi=k61cvo17dotubejmwu&amp;pvd=2&amp;lpvi=k61cvjemnqworlyzyf&amp;nv&amp;sn=lb%7Cmr-flex&amp;ssz=%7C300x250.300x600&amp;lo=https%3A//web.archive.org/web/20170606013843id_/http%253A//www.berkeleywellness.com/privacy-policy&amp;r=&amp;sd=800x600&amp;to=0&amp;la=en-US&amp;np=Linux%20x86_64&amp;ua=Mozilla/5.0%20%28X11%3B%20Linux%20x86_64%29%20AppleWebKit/537.36%20%28KHTML%2C%20like%20Gecko%29%20HeadlessChrome/69.0.3494.0%20Safari/537.36&amp;lpv=5997&amp;cts_ns=1580426073319&amp;cts_js=1580426074983&amp;cts_ini=1580426074993&amp;e"></script><script async="" src="https://web.archive.org/web/20151004024201/https://sb.scorecardresearch.com/beacon.js"></script><script src="//web.archive.org/web/20151004024208/http://cdn.yldbt.com/js/yieldbot.intent.js"></script><script type="text/javascript" src="/assets/namespace.js"></script>
 
   <script type="text/javascript" src="http://www.berkeleywellness.com/misc/jquery.js?v=1.4.4"></script>
 <script type="text/javascript" src="http://www.berkeleywellness.com/misc/jquery.once.js?v=1.2"></script>
-<script type="text/javascript" src="http://www.berkeleywellness.com/misc/drupal.js?ohs602"></script>
+<script type="text/javascript" src="http://www.berkeleywellness.com/misc/drupal.js?ojz9pp"></script>
 <script type="text/javascript" src="http://www.berkeleywellness.com/misc/ui/jquery.ui.core.min.js?v=1.8.7"></script>
 <script type="text/javascript" src="http://www.berkeleywellness.com/misc/ui/jquery.ui.datepicker.min.js?v=1.8.7"></script>
-<script type="text/javascript" src="http://www.berkeleywellness.com/sites/all/modules/custom/elinkreport//js/elinkreport.js?ohs602"></script>
-<script type="text/javascript" src="http://www.berkeleywellness.com/sites/all/modules/custom/linkitreport//js/linkitreport.js?ohs602"></script>
-<script type="text/javascript" src="http://www.berkeleywellness.com/sites/all/modules/custom/wellness//js/jquery.lazyload-ad-1.4.2.js?ohs602"></script>
-<script type="text/javascript" src="http://www.berkeleywellness.com/sites/all/modules/custom/wellness//js/wellness_ads.js?ohs602"></script>
+<script type="text/javascript" src="http://www.berkeleywellness.com/sites/all/modules/custom/elinkreport//js/elinkreport.js?ojz9pp"></script>
+<script type="text/javascript" src="http://www.berkeleywellness.com/sites/all/modules/custom/linkitreport//js/linkitreport.js?ojz9pp"></script>
+<script type="text/javascript" src="http://www.berkeleywellness.com/sites/all/modules/custom/wellness//js/jquery.lazyload-ad-1.4.2.js?ojz9pp"></script>
+<script type="text/javascript" src="http://www.berkeleywellness.com/sites/all/modules/custom/wellness//js/wellness_ads.js?ojz9pp"></script>
 <script type="text/javascript" src="//assets.adobedtm.com/5059f72722acfeb51551a79f3617d8eeb2b107c1/satelliteLib-644325ae1644c0d532fea21abf2de0ced7bb1f2c.js"></script>
-<script type="text/javascript" src="http://www.berkeleywellness.com/sites/all/modules/views_slideshow/js/views_slideshow.js?ohs602"></script>
+<script type="text/javascript" src="http://www.berkeleywellness.com/sites/all/modules/views_slideshow/js/views_slideshow.js?ojz9pp"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 jQuery(document).ready(function(){
@@ -56,7 +56,7 @@ jQuery(document).ready(function(){
 </script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
-jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":{"theme":"wellness","theme_token":"1rJJhlVe6ZmGYm5cg3NCSBRqeb8W7_GZGyayM5FWmuo","css":{"modules\/system\/system.base.css":1,"modules\/system\/system.menus.css":1,"modules\/system\/system.messages.css":1,"modules\/system\/system.theme.css":1,"misc\/ui\/jquery.ui.core.css":1,"misc\/ui\/jquery.ui.theme.css":1,"misc\/ui\/jquery.ui.datepicker.css":1,"modules\/comment\/comment.css":1,"sites\/all\/modules\/date\/date_api\/date.css":1,"sites\/all\/modules\/date\/date_popup\/themes\/datepicker.1.7.css":1,"modules\/field\/theme\/field.css":1,"modules\/node\/node.css":1,"modules\/search\/search.css":1,"modules\/user\/user.css":1,"sites\/all\/modules\/views\/css\/views.css":1,"sites\/all\/modules\/ctools\/css\/ctools.css":1,"sites\/all\/modules\/views_slideshow\/views_slideshow.css":1},"js":{"misc\/jquery.js":1,"misc\/jquery.once.js":1,"misc\/drupal.js":1,"misc\/ui\/jquery.ui.core.min.js":1,"misc\/ui\/jquery.ui.datepicker.min.js":1,"sites\/all\/modules\/custom\/elinkreport\/\/js\/elinkreport.js":1,"sites\/all\/modules\/custom\/linkitreport\/\/js\/linkitreport.js":1,"sites\/all\/modules\/custom\/wellness\/\/js\/jquery.lazyload-ad-1.4.2.js":1,"sites\/all\/modules\/custom\/wellness\/\/js\/wellness_ads.js":1,"\/\/assets.adobedtm.com\/5059f72722acfeb51551a79f3617d8eeb2b107c1\/satelliteLib-644325ae1644c0d532fea21abf2de0ced7bb1f2c.js":1,"sites\/all\/modules\/views_slideshow\/js\/views_slideshow.js":1,"0":1}}});
+jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":{"theme":"wellness","theme_token":"KVf7WYLYg2199zuy_gXid0IUONj71VFE_SiFLamdmdo","css":{"modules\/system\/system.base.css":1,"modules\/system\/system.menus.css":1,"modules\/system\/system.messages.css":1,"modules\/system\/system.theme.css":1,"misc\/ui\/jquery.ui.core.css":1,"misc\/ui\/jquery.ui.theme.css":1,"misc\/ui\/jquery.ui.datepicker.css":1,"modules\/comment\/comment.css":1,"sites\/all\/modules\/date\/date_api\/date.css":1,"sites\/all\/modules\/date\/date_popup\/themes\/datepicker.1.7.css":1,"modules\/field\/theme\/field.css":1,"modules\/node\/node.css":1,"modules\/search\/search.css":1,"modules\/user\/user.css":1,"sites\/all\/modules\/views\/css\/views.css":1,"sites\/all\/modules\/ctools\/css\/ctools.css":1,"sites\/all\/modules\/views_slideshow\/views_slideshow.css":1},"js":{"misc\/jquery.js":1,"misc\/jquery.once.js":1,"misc\/drupal.js":1,"misc\/ui\/jquery.ui.core.min.js":1,"misc\/ui\/jquery.ui.datepicker.min.js":1,"sites\/all\/modules\/custom\/elinkreport\/\/js\/elinkreport.js":1,"sites\/all\/modules\/custom\/linkitreport\/\/js\/linkitreport.js":1,"sites\/all\/modules\/custom\/wellness\/\/js\/jquery.lazyload-ad-1.4.2.js":1,"sites\/all\/modules\/custom\/wellness\/\/js\/wellness_ads.js":1,"\/\/assets.adobedtm.com\/5059f72722acfeb51551a79f3617d8eeb2b107c1\/satelliteLib-644325ae1644c0d532fea21abf2de0ced7bb1f2c.js":1,"sites\/all\/modules\/views_slideshow\/js\/views_slideshow.js":1,"0":1}}});
 //--><!]]>
 </script>
 <script type="text/javascript" src="/assets/thcn_ads.js"></script>
@@ -143,7 +143,7 @@ function triggerEvar(arg)
 						
                         <!-- Header Ad Banner end -->
 
-            <div class="today">December 22, 2016</div>
+            <div class="today">June 05, 2017</div>
 
             <!-- Top Menu start -->
             <div class="mainmenu_wrapper" id="mainmenu_wrapper">
@@ -187,7 +187,7 @@ jQuery(document).ready(function() {
         <label>Search</label>
         <input type="text" class="form-text input-txt" maxlength="128" size="15" value="" name="search_block_form" id="edit-search-block-form--2" title="Enter the terms you wish to search for.">
         <!--<input type="submit" class="form-submit" value="Search" name="op" id="edit-submit"></div>-->
-        <input type="hidden" value="form-jYUAl-sYrWczgnR9PdS4loOS6ia8N9S-IW-j_SVRnuk" name="form_build_id">
+        <input type="hidden" value="form-NHT2itT22JsyvFW_2PIRkMbYZjjmwmTyRZlFns-eHaU" name="form_build_id">
         <input type="hidden" value="" name="form_token">
         <input type="hidden" value="search_block_form" name="form_id">
 
@@ -241,7 +241,7 @@ jQuery(document).ready(function() {
 <li><a href="/self-care/over-counter-products" title="Over-the-counter products">Over-the-counter products</a></li>
 </ul></li>
 <li><a href="http://alerts.berkeleywellness.com/bookstore/" title="">Shop</a></li>
-<li><a href="http://alerts.berkeleywellness.com/register/default.html" title="">Free Alerts</a></li>
+<li><a href="http://alerts.berkeleywellness.com/register/default.html" title="">SUBSCRIBE</a></li>
 </ul>             </nav>
       </div>
 </div>
@@ -402,7 +402,7 @@ function triggerEvarBottom(arg)
     <a href="http://www.berkeleywellness.com/terms-service" class="last">Terms of Service</a>
 </p>
 
-<p class="copyright">© 2016 <a href="http://www.remedyhealthmedia.com/" target="_blank">Remedy Health Media, LLC</a> <span>All rights reserved</span></p>
+<p class="copyright">© 2017 <a href="http://www.remedyhealthmedia.com/" target="_blank">Remedy Health Media, LLC</a> <span>All rights reserved</span></p>
 </div>
 
        </div>
