--- a/b/bi/bir/birdsbit.com.html
+++ b/b/bi/bir/birdsbit.com.html
@@ -1,23 +1,22 @@
-<!--The following is the downloaded HTML source of the birdsbit.com privacy policy that was archived on 2016-11-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161121164352id_/http%3A//birdsbit.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the birdsbit.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606013927id_/http%3A//birdsbit.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 <meta charset="utf-8">
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
-<meta content="BirdsBit.com privacy policy | BirdsBit - Pave the way for the bird and win bitcoins" name="description">
-<meta content="get free dogecoin, win dogecoin, dogecoin faucet, dogecoin dice, multiple dogecoins, bitcoin faucet, litecoins,free litecoins, ltc,free doge, faucet, dice, win free dogecoins, free, dogecoins, win free bitcoins, get free bitcoins, bitcoin, bitcoin dice, free bitcoin" name="keywords">
-<title>Privacy policy | BirdsBit - free bitcoin game!</title>
+<meta content="" name="description">
+<meta content="" name="keywords">
+<title>BirdsBit.com - free bitcoin faucet!</title>
 <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 <meta name="csrf-param" content="authenticity_token">
-<meta name="csrf-token" content="f6JP9c9XKXKH0uJx8GZs1Xb9P57jJjowJJ/Fy5ouP41Z6iqBNBYJNENqFdMjdEF/2h/CZXjFF4QgU5dow0fQ8w==">
+<meta name="csrf-token" content="p8vqhb8FVBdgd25yUWPnRU+19P2cmpqxS2gZAg9ujA5GW5aO8CWnjZ+O8kL+zzPzHhVqKQS36wXoc1/+In4A/w==">
 <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
 <!--[if lt IE 9]>
 <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js"></script>
 <![endif]-->
-<link rel="stylesheet" media="all" href="/assets/application-8c861b8f350d570f842080d8128144ae843ea4451070ce8783d3b5af28cf6c95.css">
+<link rel="stylesheet" media="all" href="/assets/application-b5379b954e823a89da5a2bb6e5257e26fea1923f9bdaf6a05ba125b43a47963d.css">
 <link href="https://fonts.googleapis.com/css?family=Alice" rel="stylesheet" type="text/css">
-<script async="" src="//www.google-analytics.com/analytics.js"></script><script src="/assets/front-acb50fc6e9cf6c9163c468c057b32e9fd5eb446abb419b12a689e58c893043d1.js"></script>
-<script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script async="" src="//www.google-analytics.com/analytics.js"></script><script src="/assets/front-3dc63736f7841816f989d95a6f32171e2ca1cb2005f412f75f32ab88aa64d4f7.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -26,25 +25,8 @@
   ga('create', 'UA-21398326-20', 'auto');
   ga('send', 'pageview');
 </script>
-<script>
-  (function(w) {
-  if(navigator.userAgent.match(/iPhone|iPod|iPad|Android/i)==null)return;
-  var d=document,h=d.getElementsByTagName('head')[0],s=d.createElement('style'),j=d.createElement('script'),k=d.createElement('script');
-  s.setAttribute('rel','mw-page-block');s.innerHTML='body > * {display:none !important}';
-  j.setAttribute('src','//cdn.adsoptimal.com/advertisement/settings/40682.js');
-  k.setAttribute('src','//cdn.adsoptimal.com/advertisement/dispatcher.js');
-  j.onerror=k.onerror=function(){h.removeChild(s);h.removeChild(j);h.removeChild(k);};
-  h.appendChild(s);h.appendChild(j);h.appendChild(k);
-  })(window);
-  (function(w) {
-  var d=document,h=d.getElementsByTagName('head')[0],j=d.createElement('script'),k=d.createElement('script');
-  j.setAttribute('src','//cdn.adsoptimal.com/advertisement/settings/40682.js');
-  k.setAttribute('src','//cdn.adsoptimal.com/advertisement/manual.js');
-  h.appendChild(j); h.appendChild(k);
-  })(window);
-</script><script src="//cdn.adsoptimal.com/advertisement/settings/40682.js"></script><script src="//cdn.adsoptimal.com/advertisement/manual.js"></script>
 </head>
-<body id="fb"><div id="adsense_blocked" style="position: fixed; height: 50%; width: 50%; background-color: white; border: 2px solid black; top: 86.0135px; left: 25%; z-index: 1000;"><div style="padding: 10px; font-weight: bold; color: black; font-size: 16px; line-height: 20px; text-align: justify">Today we are faced with the same problem as many other faucets - <span style="color: red">ceased cooperation with the company Google (BAN)</span>. <br> We have to replace the advertisers what would reduce earnings and payments respectively. <br> <br> We have to reduce payments as advertising revenue fell by more than 50%. Once we will establish monetization, payments will be increased <br><br>We appreciate the confidence in us, we will try to pay you as much as possible! </div><center><div id="cookies_agreement_button" style="background-color: #f1d600; width: 100px; margin: 20px; border-radius: 8px; cursor: pointer; text-align: center; line-height: 30px; font-weight: bold;">Got it!</div></center></div><div id="cookies_agreement" style="position: fixed; height: 70px; background-color: rgb(34, 34, 34); top: 100%; width: 100%; z-index: 1000; margin-top: -62.1424px;"><div style="float: left; width: calc(100% - 150px); padding: 5px 0 5px 10px; height: 70px; text-align: left; line-height: 30px; font-weight: bold; color: #ffffff;">We use a cookie, to personalize content and advertising, social networking features to integrate and analyze our traffic. We also pass on to our partners with advertising, analytics, and social networking information about how you use our site. Important - using this site you agree with this information! Our private policy please read <a href="/">here. </a><a href="https://web.archive.org/web/20161010220952/http://www.google.com/intl/uk/policies/privacy/partners/" target="_blank">Read here about Google cookies policy</a></div><div id="cookies_agreement_button" style="float: right; height: 30px; background-color: #f1d600; width: 100px; margin: 20px; border-radius: 8px; cursor: pointer; text-align: center; line-height: 30px; font-weight: bold;">Got it!</div></div>
+<body id="fb"><div id="cookies_agreement" style="position: fixed; height: 70px; background-color: rgb(34, 34, 34); top: 100%; width: 100%; z-index: 1000; margin-top: -69.973px;"><div style="float: left; width: calc(100% - 150px); padding: 5px 0 5px 10px; height: 70px; text-align: left; line-height: 30px; font-weight: bold; color: #ffffff;">We use a cookie, to personalize content and advertising, social networking features to integrate and analyze our traffic. We also pass on to our partners with advertising, analytics, and social networking information about how you use our site. Important - using this site you agree with this information! Our private policy please read <a href="/">here. </a><a href="https://web.archive.org/web/20170603205823/http://www.google.com/intl/uk/policies/privacy/partners/" target="_blank">Read here about Google cookies policy</a></div><div id="cookies_agreement_button" style="float: right; height: 30px; background-color: #f1d600; width: 100px; margin: 20px; border-radius: 8px; cursor: pointer; text-align: center; line-height: 30px; font-weight: bold;">Got it!</div></div>
 <nav class="navbar navbar-default navbar-fixed-top">
 <div class="container-fluid">
 <!-- Brand and toggle get grouped for better mobile display -->
@@ -70,23 +52,17 @@
 </nav>
 <div class="container-fluid" id="content">
 <div class="row-fluid">
-<div class="col-md-3">
-<div class="text-center hidden-xs">
-<center><div class="adsoptimal-slot" style="width: 160px; height: 600px;"></div></center>
-<br>
+<div class="col-md-2">
+<div class="ad_container"><center><div><iframe scrolling="no" src="//coinad.com/ads/show/show.php?a=N6YUAJ8JUC3XA&amp;b=73DF6ST85WM9A" style="overflow:hidden;width:160px;height:600px;" frameborder="0"></iframe></div></center></div>
 
-<center><div><iframe scrolling="no" src="//coinad.com/ads/show/show.php?a=O24OD8VV2JC7X&amp;b=9I0R55GHUD46G" style="overflow:hidden;width:300px;height:250px;" frameborder="0"></iframe></div></center>
-
-</div>
 </div>
 <div class="col-md-8">
 <div class="text-center">
 
-<center><div class="adsoptimal-slot" style="width: 728px; height: 90px;"></div></center>
-<br>
-
-<br>
-<center><div><iframe scrolling="no" src="//coinad.com/ads/show/show.php?a=O24OD8VV2JC7X&amp;b=3EUP4O7YWBL2E" style="overflow:hidden;width:728px;height:90px;" frameborder="0"></iframe></div></center>
+<div class="ad_container">
+<center style="display: inline-block; vertical-align: top;"><div><iframe scrolling="no" src="//coinad.com/ads/show/show.php?a=N6YUAJ8JUC3XA&amp;b=4PLMI83XKAIEN" style="overflow:hidden;width:728px;height:90px;" frameborder="0"></iframe></div></center><iframe src="https://coinmedia.co/new_code_site47992.js" scrolling="no" frameborder="0" width="728px" height="90px"></iframe>
+<center style="display: inline-block; vertical-align: top;"><div><iframe scrolling="no" src="http://topgames.io/banner/show/26" style="overflow:hidden;width:728px;height:90px;" frameborder="0"></iframe></div></center>
+</div>
 
 <table border="0" width="100%">
 <tbody>
@@ -94,7 +70,7 @@
 <td>
 <div id="ppHeader" style="font-family: verdana; font-size: 21pt; margin: 0 auto">
 <font color="black" face="Verdana" size="2" style="font-weight: 700">
-BirdsBit.com Privacy Policy
+Birds-Bit.com.com Privacy Policy
 </font>
 </div>
 <font color="black" face="Verdana" style="font-size: 9pt"></font>
@@ -181,7 +157,9 @@ information on our site.
 <font color="black" face="Verdana" style="font-size: 9pt">
 <br>
 </font>
-<div class="adsoptimal-slot" style="display: inline-block; vertical-align: top; width: 300px; height: 250px;"></div>
+<div class="ad_container">
+<center style="display: inline-block; vertical-align: top;"><div><iframe scrolling="no" src="//coinad.com/ads/show/show.php?a=N6YUAJ8JUC3XA&amp;b=OGKSRMM6S30RO" style="overflow:hidden;width:300px;height:250px;" frameborder="0"></iframe></div></center><iframe src="https://coinmedia.co/new_code_site47993.js" scrolling="no" frameborder="0" width="300px" height="250px"></iframe>
+</div>
 
 <font style="font-size: 9pt">
 <div class="grayText">
@@ -195,10 +173,9 @@ your information?
 <font color="black" face="Verdana">
 <br>
 </font>
-<div class="text-center" style="font-size: 14px;">
-<center><div><iframe scrolling="no" src="//coinad.com/ads/show/show.php?a=JHIGK2JLLEAQ4&amp;b=DSZMDFGVP8I3I" style="overflow:hidden;width:468px;height:60px;" frameborder="0"></iframe></div></center>
-<br>
-<center><div><iframe scrolling="no" src="http://topgames.io/banner/show/10" style="overflow:hidden;width:468px;height:60px;" frameborder="0"></iframe></div></center>
+<div class="ad_container">
+<center style="display: inline-block; vertical-align: top;"><div><iframe scrolling="no" src="//coinad.com/ads/show/show.php?a=N6YUAJ8JUC3XA&amp;b=P9PH83CFJAIJA" style="overflow:hidden;width:468px;height:60px;" frameborder="0"></iframe></div></center><iframe src="https://coinmedia.co/new_code_site47991.js" scrolling="no" frameborder="0" width="468px" height="60px"></iframe>
+<center style="display: inline-block; vertical-align: top;"><div><iframe scrolling="no" src="http://topgames.io/banner/show/25" style="overflow:hidden;width:468px;height:60px;" frameborder="0"></iframe></div></center>
 </div>
 
 <div class="innerText">
@@ -365,7 +342,7 @@ Cookies and Web Beacons
 </span>
 <br style="color: black; font-family: Verdana; font-size: 12px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px">
 <span style="color: black; font-family: Verdana; font-size: 12px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px; display: inline !important; float: none">
-www.birdsbit.com does use cookies to store information about
+www.Birds-Bit.com.com does use cookies to store information about
 visitors preferences, record user-specific information on which
 pages the user access or visit, customize Web page content based
 on visitors browser type or other information that the visitor
@@ -384,12 +361,12 @@ DoubleClick DART Cookie
 <br style="color: black; font-family: Verdana; font-size: 12px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px">
 <span style="color: black; font-family: Verdana; font-size: 12px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px; display: inline !important; float: none">
 .:: Google, as a third party vendor, uses cookies to serve ads
-on www.birdsbit.com.
+on www.Birds-Bit.com.com.
 </span>
 <br style="color: black; font-family: Verdana; font-size: 12px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px">
 <span style="color: black; font-family: Verdana; font-size: 12px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px; display: inline !important; float: none">
 .:: Google's use of the DART cookie enables it to serve ads to
-users based on their visit to www.birdsbit.com and other sites on
+users based on their visit to www.Birds-Bit.com.com and other sites on
 the Internet.
 <span class="Apple-converted-space">&nbsp;</span>
 </span>
@@ -414,7 +391,7 @@ Google Adsense
 <p>
 <span style="color: black; font-family: Verdana; font-size: 12px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px; display: inline !important; float: none">
 These third-party ad servers or ad networks use technology to
-the advertisements and links that appear on www.birdsbit.com send
+the advertisements and links that appear on www.Birds-Bit.com.com send
 directly to your browsers. They automatically receive your IP
 address when this occurs. Other technologies ( such as cookies,
 JavaScript, or Web Beacons ) may also be used by the third-party
@@ -425,7 +402,7 @@ and / or to personalize the advertising content that you see.
 <br style="color: black; font-family: Verdana; font-size: 12px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px">
 <br style="color: black; font-family: Verdana; font-size: 12px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px">
 <span style="color: black; font-family: Verdana; font-size: 12px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px; display: inline !important; float: none">
-www.birdsbit.com has no access to or control over these cookies
+www.Birds-Bit.com.com has no access to or control over these cookies
 that are used by third-party advertisers.
 <span class="Apple-converted-space">&nbsp;</span>
 </span>
@@ -456,7 +433,7 @@ Log Files
 </b>
 <br style="color: black; font-family: Verdana; font-size: 12px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px">
 <span style="color: black; font-family: Verdana; font-size: 12px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px; display: inline !important; float: none">
-Like many other Web sites, www.birdsbit.com makes use of log
+Like many other Web sites, www.Birds-Bit.com.com makes use of log
 files. The information inside the log files includes internet
 protocol ( IP ) addresses, type of browser, Internet Service
 Provider ( ISP ), date/time stamp, referring/exit pages, and
@@ -864,7 +841,7 @@ contact us using the information below.
 </div>
 <div class="innerText">
 <font color="black" face="Verdana" style="font-size: 9pt">
-www.birdsbit.com
+www.Birds-Bit.com.com
 </font>
 </div>
 </div>
@@ -935,7 +912,10 @@ www.birdsbit.com
 
 </div>
 </div>
-<div class="col-md-1"></div>
+<div class="col-md-2">
+<div class="ad_container"><iframe src="https://coinmedia.co/new_code_site47995.js" scrolling="no" frameborder="0" width="160px" height="600px"></iframe></div>
+
+</div>
 </div>
 </div>
 
